# Surakarta-RuleAiTest

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: correctness.yml
src/: CMakeLists.txt
src/hello_cpp/: CMakeLists.txt  hello_cpp.h  hello_cpp_defs.h
src/surakarta/: CMakeLists.txt  global_random_generator.h  main.cpp  surakarta_board.h  surakarta_common.h  surakarta_game.cpp  surakarta_game.h  surakarta_piece.h  surakarta_reason.cpp  surakarta_reason.h  surakarta_rule_manager.cpp  surakarta_rule_manager.h
src/surakarta/surakarta_agent/: surakarta_agent_base.h  surakarta_agent_mine.cpp  surakarta_agent_mine.h  surakarta_agent_random.cpp  surakarta_agent_random.h
src/surakarta_ta/: CMakeLists.txt  main.cpp  surakarta_rule_manager_imp.h
src/tests/: CMakeLists.txt  hello_cpp_test.cpp  surakarta_rule_manager_test.cpp
src/tests/test_data/: game1.txt  game2.txt  game3.txt  game4.txt  game5.txt  game6.txt  game7.txt  game8.txt  game9.txt  meta.json
